update demo notebook ce

--- a/demo/tabpfniml_demo_notebook.ipynb
+++ b/demo/tabpfniml_demo_notebook.ipynb
@@ -528,7 +528,11 @@
    "metadata": {},
    "source": [
     "### Counterfactual Explanations\n",
-    "Counterfactual explanations cannot be directly classified as feature effects or feature importance method, but are categorized as local explanations. The key idea of counterfactuals is to figure out how the features of a certain observation need to change such that the model would predict the opposing class. In other words, it is about finding a true or artificial observation that indicates the minimal changes necessary in the features of a factual observation for the model to predict a desired class."
+    "Counterfactual explanations cannot be directly classified as feature effects or feature importance method, but are categorized as local explanations. The key idea of counterfactuals is to figure out how the features of a certain observation need to change such that the model would predict the opposing class. In other words, it is about finding a true or artificial observation that indicates the minimal changes necessary in the features of a factual observation for the model to predict a desired class.\n",
+    "\n",
+    "Details on the different objectives can be found in Dandl et al. (2020): https://link.springer.com/chapter/10.1007/978-3-030-58112-1_31\n",
+    "\n",
+    "In this example, the population is initialized based on the test-set, often leading to better plausibility of the returned CEs."
    ]
   },
   {
@@ -739,6 +743,217 @@
     "            population_size=1000, \n",
     "            offsprings_size=500)\n",
     "ce_obj.get_counterfactuals(first_n=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alternatively, one can also initialize the population by mutating around the observation that a CE is searched for. This often leads to higher sparsity and closeness of the returnes CEs. We can also specify that certain features should not differ from the value in the factual observation; for this example we chose the feature age."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading model that can be used for inference only\n",
+      "Using a Transformer with 25.82 M parameters\n",
+      "(13203, 8)\n",
+      "(500, 8)\n",
+      "(500, 8)\n",
+      "(500, 8)\n",
+      "(500, 8)\n",
+      "(500, 8)\n",
+      "(500, 8)\n",
+      "(500, 8)\n",
+      "(500, 8)\n",
+      "(500, 8)\n",
+      "(500, 8)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"4\" halign=\"left\">Objectives</th>\n",
+       "      <th>Non-actionable Features</th>\n",
+       "      <th colspan=\"7\" halign=\"left\">Actionable Features</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>Prediction</th>\n",
+       "      <th>Closeness</th>\n",
+       "      <th>Sparsity</th>\n",
+       "      <th>Plausibility</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Pregnancies</th>\n",
+       "      <th>Glucose</th>\n",
+       "      <th>BloodPressure</th>\n",
+       "      <th>SkinThickness</th>\n",
+       "      <th>Insulin</th>\n",
+       "      <th>BMI</th>\n",
+       "      <th>DiabetesPedigreeFunction</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>x_factual</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>159.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.4</td>\n",
+       "      <td>0.294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CE 1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.010678</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.031605</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>142.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.4</td>\n",
+       "      <td>0.294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CE 2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.014447</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.031100</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>136.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.4</td>\n",
+       "      <td>0.294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CE 3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.015075</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.030471</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>135.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.4</td>\n",
+       "      <td>0.294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CE 4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.029489</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.016058</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>134.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>30.4</td>\n",
+       "      <td>0.294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CE 5</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.017734</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.026960</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>143.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.4</td>\n",
+       "      <td>0.156</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Objectives                                 Non-actionable Features  \\\n",
+       "          Prediction Closeness Sparsity Plausibility                     Age   \n",
+       "x_factual        1.0  0.000000      0.0     0.000000                    40.0   \n",
+       "CE 1             0.0  0.010678      1.0     0.031605                    40.0   \n",
+       "CE 2             0.0  0.014447      1.0     0.031100                    40.0   \n",
+       "CE 3             0.0  0.015075      1.0     0.030471                    40.0   \n",
+       "CE 4             0.0  0.029489      3.0     0.016058                    40.0   \n",
+       "CE 5             0.0  0.017734      2.0     0.026960                    40.0   \n",
+       "\n",
+       "          Actionable Features                                              \\\n",
+       "                  Pregnancies Glucose BloodPressure SkinThickness Insulin   \n",
+       "x_factual                 7.0   159.0          64.0           0.0     0.0   \n",
+       "CE 1                      7.0   142.0          64.0           0.0     0.0   \n",
+       "CE 2                      7.0   136.0          64.0           0.0     0.0   \n",
+       "CE 3                      7.0   135.0          64.0           0.0     0.0   \n",
+       "CE 4                      7.0   134.0          72.0           0.0     0.0   \n",
+       "CE 5                      7.0   143.0          64.0           0.0     0.0   \n",
+       "\n",
+       "                                          \n",
+       "            BMI DiabetesPedigreeFunction  \n",
+       "x_factual  27.4                    0.294  \n",
+       "CE 1       27.4                    0.294  \n",
+       "CE 2       27.4                    0.294  \n",
+       "CE 3       27.4                    0.294  \n",
+       "CE 4       30.4                    0.294  \n",
+       "CE 5       27.4                    0.156  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ce_obj_na = Counterfactuals(diabetes_data, n_train=N_TRAIN, n_test=N_TEST)\n",
+    "ce_obj_na.fit(init_based_on_test_set=False,\n",
+    "            test_index_factual=0,\n",
+    "            population_size=1000, \n",
+    "            offsprings_size=500,\n",
+    "            non_actionable_features=['Age'])\n",
+    "ce_obj_na.get_counterfactuals(first_n=5)"
    ]
   },
   {
