--- a/demo/tabpfniml_demo_notebook.ipynb
+++ b/demo/tabpfniml_demo_notebook.ipynb
@@ -74,7 +74,10 @@
     "\n",
     "*Acknowledgement* \n",
     "\n",
-    "Smith, J.W., Everhart, J.E., Dickson, W.C., Knowler, W.C., & Johannes, R.S. (1988). Using the ADAP learning algorithm to forecast the onset of diabetes mellitus. In Proceedings of the Symposium on Computer Applications and Medical Care (pp. 261--265). IEEE Computer Society Press."
+    "Smith, J.W., Everhart, J.E., Dickson, W.C., Knowler, W.C., & Johannes, R.S. (1988). Using the ADAP learning algorithm to forecast the onset of diabetes mellitus. In Proceedings of the Symposium on Computer Applications and Medical Care (pp. 261--265). IEEE Computer Society Press.\n",
+    "\n",
+    "\n",
+    "For important information on this particular dataset consider https://www.journals.uchicago.edu/doi/full/10.1086/693853."
    ]
   },
   {
